--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,10 @@
 	"name": "frontend",
 	"version": "0.1.0",
 	"private": true,
+	"engines": {
+		"node": "16.x",
+		"npm": "8.15.0"
+	},
 	"dependencies": {
 		"@material-ui/core": "^4.12.4",
 		"@material-ui/data-grid": "^4.0.0-alpha.37",
