--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT='4000'
 NODE_ENV='development'
 DB_URI='Enter you mongodb uri'
-CLOUDINARY_NAME=dnm2tmxrh
-CLOUDINARY_API_KEY=236235121862454
-CLOUDINARY_API_SECRET=cVE7JcqCTcwx8H4eCneV3_OR450
+CLOUDINARY_NAME=You can find on cloudinary dashboard/settings
+CLOUDINARY_API_KEY=xxxxxxxx
+CLOUDINARY_API_SECRET=You can find on cloudinary dashboard/settings
 STRIPE_SECRET_KEY=
 FRONTEND_TEST_URL=
 COMPANY_NAME=DemoEcom
